# video_editor_on_AGX_orin

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.json  pyproject.toml  run_docker.sh
scripts/: build_image.sh
src/local_video_editor/: __init__.py  asr.py  cli.py  config.py  io_utils.py  media.py  pipeline.py  silence.py  subtitles.py  summary.py  transcript.py
tests/: test_cli.py  test_config.py  test_media_integration.py  test_pipeline.py  test_silence.py  test_subtitles.py  test_summary.py  test_transcript.py
